# location_ipfire_db_reader

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/workflows/: run_tests.yml
location_ipfire_db_reader/: __init__.py  database.py  database_reader.py  decompress_db.py  download_db.py  exceptions.py  interpret_location_db.py  ip_information.py
scripts/: dump_as_csv.py
src/location_ipfire_db_reader/: __init__.py  database.py  download_db.py  interpret_location_db.py
tests/: conftest.py  test_database_reader.py  test_download_db.py  test_interpret_location_db.py  test_issue_1.py  test_issue_4.py
