[tool.poetry]
name = "location_ipfire_db_reader"
version = "1.0.1"
description = "Easily get the country code from an ip address."
authors = ["Steven Van Ingelgem <steven@vaningelgem.be>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = ">=3.7"
requests = ">=2"


[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-pyproject = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 120


[tool.flake8]
max_line_length = 120
extend_ignore = 'E203'


[tool.poetry.urls]
"Source Code" = "https://github.com/svaningelgem/location_ipfire_db_reader"
