[tool.poetry]
name = "location_ipfire_db_reader"
version = "1.0.4"
description = "Easily get the country code from an ip address."
authors = ["Steven Van Ingelgem <steven@vaningelgem.be>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2"


[tool.poetry.group.dev.dependencies]
ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
"Source Code" = "https://github.com/svaningelgem/location_ipfire_db_reader"


[tool.ruff]
select = ["E", "F", "C", "W", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401"]
fix = true

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py39"
